--- a/IITM_OPPE.ipynb
+++ b/IITM_OPPE.ipynb
@@ -177,7 +177,7 @@
       "source": [
         "database = 'flis'\n",
         "user = 'postgres'\n",
-        "password = 'sidjadhav0602'\n",
+        "password = '******************'\n",
         "port = '5432'\n",
         "host = 'localhost'\n"
       ]
@@ -329,7 +329,7 @@
         "\n",
         "database = 'flis'\n",
         "user = 'postgres'\n",
-        "password = 'sidjadhav0602'\n",
+        "password = '******************'\n",
         "port = '5432'\n",
         "host = 'localhost'\n",
         "\n",
@@ -382,7 +382,7 @@
         "\n",
         "database = 'university'\n",
         "user = 'postgres'\n",
-        "password = 'sidjadhav0602'\n",
+        "password = '******************'\n",
         "port = '5432'\n",
         "host = 'localhost'\n",
         "\n",
